2005-03-14  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* it.po: update from Kostantino

2005-03-08  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* es.po: update from Eulogio Serradilla

2005-03-07  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* es.po: update from Eulogio Serradilla

	* da.po: update from Claus Hindsgaul.

	* *.po: remerge.

	* de.po: update from Michael Schmitt.

2005-02-11  Michael Schmitt  <michael.schmitt@teststep.org>

	* de.po: more updates.

2005-02-07  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* de.po: update from Michael Schmitt.

2005-02-02  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* fr.po: update. A fuzzy entry remains because there is a message
	that I cannot translate in the non-boost::format setting.

	* *.po: remerge.
	
	* de.po: update from Michael Schmitt.

2004-10-06  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* postats.sh (lyx_version): back to cvs

2004-10-05  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* postats.sh (lyx_version): set to 1.3.5

	* ru.po: fix crash when autosaving reported by Nikita V.
	Youshchenko

2004-09-28  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* es.po: update from Eulogio Serradilla

2004-09-20  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* it.po: update from Kostantino

2004-09-15  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* *.po: remerge

	* fr.po: fix 20 easy warnings reported by pocheck.pl

	* de.po: update from Michael Schmitt

2004-09-14  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* eu.po: update from dooteo

	* da.po: update from Claus Hindsgaul

	* nn.po: update from Ingar Pareliussen

2004-09-10  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* fr.po: small update

	* *.po: remerge

	* Makefile.in.in (i18n.php3): new target; this file is used in the
	www-devel repository

2004-06-02  Michael Schmitt <Michael.Schmitt@teststep.org>

	* de.po: update

2004-03-23  Claudiu Costin  <claudiuc@kde.org>

	* ro.po: update

2004-03-22  Claus Hindsgaul  <claus_h@image.dk>

	* da.po: update